<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login_screen"
    android:padding="40dp"
    android:background="#03DAC6"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Line2"
        android:textSize="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        app:fontFamily="sans-serif-black" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:id="@+id/email"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/pass_word"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:id="@+id/confirm_password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/create_new_account_button"
        android:text="@string/create_new_account"
        android:background="#6200EE"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#6200EE"/>



</LinearLayout>