<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login_screen"
    android:padding="40dp"
    android:background="#03DAC6"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="Social Media"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Line2"
        android:textSize="50sp"
        app:fontFamily="cursive" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        app:fontFamily="sans-serif-black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="Email"
        android:inputType="textPersonName"
        android:id="@+id/user_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:id="@+id/pass_word"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:id="@+id/login_button"
        android:text="@string/log_in"
        android:background="#6200EE"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_new_account"
        android:id="@+id/new_account_btn"
        android:background="#BF86FF"/>


</LinearLayout>